# ai-voice-command

./: .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  nest_pb2.py  nest_pb2_grpc.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
.github/workflows/: deploy-develop.yml  deploy-production.yml  deploy.dev.yml  deploy.prod.yml  deply-production.yml  develop.yml
assets/: steps.json  test.srt
assets/pattern-match-intent-model/: classification_report.txt  config.json  confusion_matrix.csv  eval.json  model.safetensors
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
llm/: test.srt
llm/ner-model/: config.json  model.safetensors  tokenizer_config.json
llm/nlu-model/: classification_report.txt  config.json  confusion_matrix.csv  eval_results.json  model.safetensors  tokenizer.json  tokenizer_config.json  vocab.txt
requirements/: base.txt  dev.txt  prod.txt
src/: client.py  config.py  context.py  deps.py  enums.py  exceptions.py  main.py  models.py  router.py  schemas.py  service.py  utils.py
src/auth/: client.py  config.py  exception.py  service.py
src/client_session/: client.py  repository.py  service.py
src/intent/: client.py  config.py  exceptions.py  models.py  schemas.py  service.py  utils.py
src/objectstore/: client.py  service.py
src/stt/: client.py  config.py  exceptions.py  repository.py  router.py  service.py
src/user_session/: client.py  exceptions.py  models.py  repository.py  schemas.py  service.py
tests/stt/: test_client.py  test_repository.py  (+1 more)
(+49 files in other folders)
