[project]
name = "cheftory-ai"
version = "0.1.0"
description = "LLM others"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "openai>=1.95.1",
    "pydantic-settings>=2.10.1",
    "pysrt>=1.1.2",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "groq>=0.30.0",
]
